geo Mapping der Messstationen

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -51,12 +51,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:22:37.459625Z",
-     "start_time": "2024-05-09T14:22:37.456048Z"
+     "end_time": "2024-05-13T16:05:27.802510Z",
+     "start_time": "2024-05-13T16:05:27.799862Z"
     }
    },
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 30
   },
   {
    "cell_type": "code",
@@ -81,8 +81,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:22:47.086773Z",
-     "start_time": "2024-05-09T14:22:47.083795Z"
+     "end_time": "2024-05-13T16:05:27.835506Z",
+     "start_time": "2024-05-13T16:05:27.831857Z"
     }
    },
    "outputs": [
@@ -94,7 +94,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 31
   },
   {
    "cell_type": "code",
@@ -112,7 +112,8 @@
     "\"CREATE TABLE meteoParameter (parameterID string PRIMARY KEY , measure string, description string)\",\n",
     "\"CREATE TABLE meteoStations (stn string PRIMARY KEY, stnName string, lawCityName string,  datasource string, bfsID string, coEast string, coNorth string, coLength string, coWide string, FOREIGN KEY (lawCityName) REFERENCES city (lawCityName) ON UPDATE CASCADE, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE)\",\n",
     "\"CREATE TABLE meteoData (id INTEGER PRIMARY KEY, meteoStation string, meteoParameter string, dataTime string, value float, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) REFERENCES meteoParameter (parameterID) ON UPDATE CASCADE)\",\n",
-    "\"CREATE TABLE meteoParamBfs (id INTEGER PRIMARY KEY, bfsID string, meteoParameter string, meteoStation string, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) References meteoParameter (parameterID) ON UPDATE CASCADE, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE)\"]\n",
+    "\"CREATE TABLE meteoParamBfs (id INTEGER PRIMARY KEY, bfsID string, meteoParameter string, meteoStation string, FOREIGN KEY (bfsID) REFERENCES city (bfsID) ON UPDATE CASCADE, FOREIGN KEY (meteoParameter) References meteoParameter (parameterID) ON UPDATE CASCADE, FOREIGN KEY (meteoStation) REFERENCES meteoStations (stn) ON UPDATE CASCADE)\",\n",
+    "\"CREATE TABLE plzBfsMapping (id INTEGER PRIMARY KEY, plz string, bfsID string, cityName string, lawCityName string)\"]\n",
     "\n",
     "for code in sql:\n",
     "    cursor.execute(code)\n",
@@ -121,12 +122,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:22:49.291438Z",
-     "start_time": "2024-05-09T14:22:49.282082Z"
+     "end_time": "2024-05-13T16:05:27.860067Z",
+     "start_time": "2024-05-13T16:05:27.851182Z"
     }
    },
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 32
   },
   {
    "cell_type": "code",
@@ -150,12 +151,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:22:58.045979Z",
-     "start_time": "2024-05-09T14:22:58.038889Z"
+     "end_time": "2024-05-13T16:05:27.867828Z",
+     "start_time": "2024-05-13T16:05:27.861249Z"
     }
    },
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 33
   },
   {
    "cell_type": "code",
@@ -178,12 +179,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:02.811167Z",
-     "start_time": "2024-05-09T14:23:02.681834Z"
+     "end_time": "2024-05-13T16:05:28.015187Z",
+     "start_time": "2024-05-13T16:05:27.868730Z"
     }
    },
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 34
   },
   {
    "cell_type": "code",
@@ -206,12 +207,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:05.245066Z",
-     "start_time": "2024-05-09T14:23:05.237845Z"
+     "end_time": "2024-05-13T16:05:28.020129Z",
+     "start_time": "2024-05-13T16:05:28.015836Z"
     }
    },
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -241,12 +242,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:07.111131Z",
-     "start_time": "2024-05-09T14:23:07.104856Z"
+     "end_time": "2024-05-13T16:05:28.025131Z",
+     "start_time": "2024-05-13T16:05:28.021166Z"
     }
    },
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 36
   },
   {
    "cell_type": "code",
@@ -269,12 +270,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:08.291276Z",
-     "start_time": "2024-05-09T14:23:08.285154Z"
+     "end_time": "2024-05-13T16:05:28.029729Z",
+     "start_time": "2024-05-13T16:05:28.025748Z"
     }
    },
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 37
   },
   {
    "cell_type": "code",
@@ -303,12 +304,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:14.408630Z",
-     "start_time": "2024-05-09T14:23:09.767135Z"
+     "end_time": "2024-05-13T16:05:33.759196Z",
+     "start_time": "2024-05-13T16:05:28.030354Z"
     }
    },
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 38
   },
   {
    "cell_type": "code",
@@ -328,12 +329,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:15.218960Z",
-     "start_time": "2024-05-09T14:23:15.199330Z"
+     "end_time": "2024-05-13T16:05:33.772916Z",
+     "start_time": "2024-05-13T16:05:33.759929Z"
     }
    },
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 39
   },
   {
    "cell_type": "code",
@@ -353,12 +354,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:16.807262Z",
-     "start_time": "2024-05-09T14:23:16.801871Z"
+     "end_time": "2024-05-13T16:05:33.777792Z",
+     "start_time": "2024-05-13T16:05:33.773738Z"
     }
    },
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 40
   },
   {
    "cell_type": "code",
@@ -387,12 +388,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:23:20.099234Z",
-     "start_time": "2024-05-09T14:23:18.414018Z"
+     "end_time": "2024-05-13T16:05:35.827829Z",
+     "start_time": "2024-05-13T16:05:33.779662Z"
     }
    },
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 41
   },
   {
    "cell_type": "code",
@@ -414,12 +415,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:26:58.061070Z",
-     "start_time": "2024-05-09T14:23:21.240439Z"
+     "end_time": "2024-05-13T16:10:07.042678Z",
+     "start_time": "2024-05-13T16:05:35.828454Z"
     }
    },
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 42
   },
   {
    "cell_type": "code",
@@ -438,31 +439,17 @@
     "\n",
     "#df['date'] += '00'\n",
     "\n",
-    "#print(df)\n",
-    "\n",
-    "print(type(date))"
+    "#print(df)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:26:58.187142Z",
-     "start_time": "2024-05-09T14:26:58.062685Z"
+     "end_time": "2024-05-13T16:10:07.044907Z",
+     "start_time": "2024-05-13T16:10:07.043420Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'date' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[14], line 17\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m#Test Date Time and manipulation\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m#input = '202001240000'\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     14\u001B[0m \n\u001B[1;32m     15\u001B[0m \u001B[38;5;66;03m#print(df)\u001B[39;00m\n\u001B[0;32m---> 17\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mtype\u001B[39m(\u001B[43mdate\u001B[49m))\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'date' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 14
+   "outputs": [],
+   "execution_count": 43
   },
   {
    "cell_type": "code",
@@ -482,10 +469,14 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:10:07.228210Z",
+     "start_time": "2024-05-13T16:10:07.045607Z"
+    }
    },
    "outputs": [],
-   "execution_count": null
+   "execution_count": 44
   },
   {
    "cell_type": "code",
@@ -507,10 +498,14 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:10:07.237082Z",
+     "start_time": "2024-05-13T16:10:07.228951Z"
+    }
    },
    "outputs": [],
-   "execution_count": null
+   "execution_count": 45
   },
   {
    "cell_type": "code",
@@ -540,10 +535,14 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:10:52.404447Z",
+     "start_time": "2024-05-13T16:10:07.237644Z"
+    }
    },
    "outputs": [],
-   "execution_count": null
+   "execution_count": 46
   },
   {
    "cell_type": "code",
@@ -572,10 +571,14 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:11:00.571617Z",
+     "start_time": "2024-05-13T16:10:52.405123Z"
+    }
    },
    "outputs": [],
-   "execution_count": null
+   "execution_count": 47
   },
   {
    "cell_type": "code",
@@ -604,16 +607,45 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:11:02.920879Z",
+     "start_time": "2024-05-13T16:11:00.572329Z"
+    }
    },
    "outputs": [],
-   "execution_count": null
+   "execution_count": 48
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#Import MeteoParamBFS\n",
+    "meteoParams = pd.read_csv(\"./DATA/meteo/meteoStationBfsParameter.csv\", delimiter=\";\")\n",
+    "\n",
+    "meteoParams[\"meteoParameter\"] = '\"' + meteoParams[\"meteoParameter\"] + '\"'\n",
+    "meteoParams[\"meteoStation\"] = '\"' + meteoParams[\"meteoStation\"] + '\"'\n",
+    "\n",
+    "for index, row in meteoParams.iterrows():\n",
+    "    sql = \"INSERT INTO meteoParamBfs VALUES(NULL, {}, {}, {})\".format(row[\"bfsID\"], row[\"meteoParameter\"], row[\"meteoStation\"])\n",
+    "    cursor.execute(sql)\n",
+    "\n",
+    "#connection.commit()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:11:02.931741Z",
+     "start_time": "2024-05-13T16:11:02.921540Z"
+    }
+   },
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T14:50:39.943219Z",
-     "start_time": "2024-05-09T14:50:39.929246Z"
+     "end_time": "2024-05-13T16:11:02.939071Z",
+     "start_time": "2024-05-13T16:11:02.932440Z"
     }
    },
    "cell_type": "code",
@@ -630,21 +662,31 @@
     "connection.commit()"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 50
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:11:02.940901Z",
+     "start_time": "2024-05-13T16:11:02.939717Z"
+    }
+   },
    "cell_type": "code",
-   "source": "",
+   "source": [],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 50
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T16:11:02.942775Z",
+     "start_time": "2024-05-13T16:11:02.941624Z"
+    }
+   },
    "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 50,
+   "source": []
   }
  ]
 }
