geo Mapping der Messstationen

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -630,16 +630,16 @@
     "    sql = \"INSERT INTO meteoParamBfs VALUES(NULL, {}, {}, {})\".format(row[\"bfsID\"], row[\"meteoParameter\"], row[\"meteoStation\"])\n",
     "    cursor.execute(sql)\n",
     "\n",
-    "#connection.commit()"
+    "connection.commit()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:11:02.931741Z",
-     "start_time": "2024-05-13T16:11:02.921540Z"
+     "end_time": "2024-05-13T16:16:31.294936Z",
+     "start_time": "2024-05-13T16:16:31.275571Z"
     }
    },
-   "execution_count": 49
+   "execution_count": 51
   },
   {
    "metadata": {
