--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -28,11 +28,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Import Modules\n",
-    "Sqlite verlangt für Strings \"\"\n",
-    "Sqlite Date Time formate https://www.sqlite.org/lang_datefunc.html, muss zwingend in einem solchen Format sein.\n",
-    "SQlite NULL für ID\n",
-    "SQLite nan to NULL"
+    "# Datenquellen und Datenbank\n",
+    "In diesem Notebook werden die Datenquellen beschrieben sowie deren Herkunft. Aufgrund der grossen Datenmengen wird ein Data Warehouse angelegt. Dazu werden die Daten in eine SQLite Datenbank geladen. Dies erlaubt in der späteren Auswertungen vordefinierte Views zu erstellen und diese für die weitere Verwendung zu nutzen.\n",
+    "\n",
+    "> !! Dieses Notebook muss zuerst ausgeführt werden, damit die Datenbank erstellt wird. Sie ist zu gross um diese direkt in Github hochzuladen. !!\n",
+    "\n",
+    "## Eingesetzte Module\n",
+    "Für dieses Notebook werden folgende Module eingesetzt:\n",
+    "- __sqlite3__\n",
+    "    Wird für die Datenbank verwendet\n",
+    "- __pandas__ \n",
+    "    Wird gebraucht um die CSV Dateien zu lesen und als Dataframe in die SQLite Datenbank zu laden\n",
+    "- __numpy__\n",
+    "    Wird benötigt um die NaN Werte in den Dataframes mit NULL zu ersetzen\n",
+    "- __glob__\n",
+    "    Wird eingesetzt um gesamte Folders in einem Loop in die SQLite Datenbank zu laden"
    ],
    "metadata": {
     "collapsed": false
@@ -45,8 +55,7 @@
     "import os, sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import glob\n",
-    "import datetime\n"
+    "import glob"
    ],
    "metadata": {
     "collapsed": false,
@@ -57,6 +66,54 @@
    },
    "outputs": [],
    "execution_count": 30
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Datenbank\n",
+    "Zur Untersuchung, welche Einflussfaktoren den Stromverbrauch der Gemeinden im Kanton Luzern beeinflussen können, wird auf mehrere Datenquellen zurückgegriffen. Die Datenquellen sind nachfolgend aufgelistet und werden im weiteren Verlauf beschrieben:\n",
+    "- Smartmeter Daten der CKW AG\n",
+    "- Demografische Daten des Bundes\n",
+    "- Solarkraftwerke Daten des Bundes\n",
+    "- Historische Meteo Daten des Bundes\n",
+    "- Gemeindenamen und BFS-ID von Swisstopo\n",
+    "\n",
+    "Die genannten Datenquellen werden mit folgendem ERD in die SQLite Datenbank geladen.\n",
+    "\n",
+    "> ![ERD-Diagramm](./DATA/ERD_DB_v3.png)\n",
+    "\n",
+    "Die Erläuterungen, zu den einzelnen Tabellen, folgt bei den jeweiligen Datenimporten.\n",
+    "\n",
+    "### Eigenheiten der SQLite Datenbank\n",
+    "Die SQLite Datenbank hat gewisse Einschränkungen und Eigenheiten die beachtet werden müssen. Dies weil SQLite nicht alle Formate oder Datentypen unterstützt. Die relevanten Aspekte werden in diesem Kapitel kurz erläutert.\n",
+    "\n",
+    "__Strings__\n",
+    "Damit SQLite die Daten als String erkennt müssen diese in \"\" eingebettet werden. Ansonsten wird eine Fehlermeldung ausgegeben. Die Datentypen aus den Pandas Dataframes werden nicht in die SQLite Datenbank mitübergeben.\n",
+    "\n",
+    "__Datum__\n",
+    "SQLite kennt keinen Datum-Datentyp. Dementsprechend müssen die Datum-/Zeitstempel in einem spezifischen String-Format gespeichert werden. Eine entsprechende Umformung muss daher bereits vor dem Import erfolgen, ansonsten funktionieren die SQLite Datum-/Zeitfunktionen nicht bei den abfragen. Die unterstützten Formate sind in dieser [Dokumentation](https://www.sqlite.org/lang_datefunc.html) gelistet. Für diese Arbeit sind folgende Formate relevant:\n",
+    "- YYYY-MM-DDTHH:MM:SS.SSS \n",
+    "- YYYY-MM-DD HH:MM\n",
+    "\n",
+    "__Automatische ID__\n",
+    "Damit automatisch ein eindeutiger Primary Key generiert wird muss beim Import der Daten, der Platzhalter für das ID-Attribut leergelassen werden und mit NULL gefüllt werden. So wird automatisch ein Primary Key vergeben.\n",
+    "\n",
+    "__No Value Handling__\n",
+    "Leere Werte in den Datenquellen welche mit nan, NaN, na, etc. mit NULL ersetzt werden. Sonst wird der Wert als String interpretiert und gibt einen Fehler aus, wenn es sich um numerische Werte handelt."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Erstellen des Datenbank Files\n",
+    "Hier wird die Datenbank angelegt. Ist das File nicht vorhanden, wird dieses automatisch angelegt."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -97,6 +154,16 @@
    "execution_count": 31
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Tabellen erstellen\n",
+    "Basierend auf dem ERD werden die Tabellen in der Datenbank angelegt. Entsprechend werden die Primary Keys definierte und die Abhängigkeiten referenziert."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "source": [
     "# Tabelle erstellen\n",
@@ -130,6 +197,18 @@
    "execution_count": 32
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Views erstellen\n",
+    "Diese Views helfen in der späteren Datenanalyse und können direkt in ein Dataframe geladen werden für die weitere Verwendung.\n",
+    "\n",
+    "> <font color=red>Beschreibungen der Views</font>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "source": [
     "# Views erstellen\n",
@@ -157,6 +236,13 @@
    },
    "outputs": [],
    "execution_count": 33
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
