--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -95,6 +95,9 @@
     "- YYYY-MM-DDTHH:MM:SS.SSS \n",
     "- YYYY-MM-DD HH:MM\n",
     "\n",
+    "So können Datumabfragen erstellt werden wie im nachfolgenden Beispiel\n",
+    "> `SELECT MAX(strftime('%Y-%m-%d %H:%M', dataTime)) FROM meteoData;`\n",
+    "\n",
     "__Automatische ID__\n",
     "Damit automatisch ein eindeutiger Primary Key generiert wird muss beim Import der Daten, der Platzhalter für das ID-Attribut leergelassen werden und mit NULL gefüllt werden. So wird automatisch ein Primary Key vergeben.\n",
     "\n",
