--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "Die Erläuterungen, zu den einzelnen Tabellen, folgt bei den jeweiligen Datenimporten.\n",
     "\n",
-    "### Eigenheiten der SQLite Datenbank\n",
+    "### Eigenschaften der SQLite Datenbank\n",
     "Die SQLite Datenbank hat gewisse Einschränkungen und Eigenheiten die beachtet werden müssen. Dies weil SQLite nicht alle Formate oder Datentypen unterstützt. Die relevanten Aspekte werden in diesem Kapitel kurz erläutert.\n",
     "\n",
     "__Strings__\n",
@@ -242,7 +242,24 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## Datenquellen\n",
+    "Nachfolgend werden die verwendeten Datenquellen beschrieben und ein erstes Mal analysiert.\n",
+    "\n",
+    "### BFS-ID Verzeichnis\n",
+    "Herausgeber: Bundesamt für Landestopografie Swisstopo\n",
+    "Link: https://www.swisstopo.admin.ch/de/amtliches-ortschaftenverzeichnis#Ortschaftenverzeichnis--Download\n",
+    "Beschreibung\n",
+    "Zeitraum\n",
+    "Zweckerfüllung\n",
+    "Qualität (Glaubwürdigkeit, Nützlichkeit, Interpretierbarkeit, Schlüsselintegrität)\n",
+    "Verfügbarkeit\n",
+    "Preis\n",
+    "\n",
+    "Schwierigkeiten, \n",
+    "\n",
+    "Inhaltliche Analyse\n"
+   ],
    "metadata": {
     "collapsed": false
    }
