--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -245,11 +245,15 @@
    "source": [
     "## Datenquellen\n",
     "Nachfolgend werden die verwendeten Datenquellen beschrieben und ein erstes Mal analysiert.\n",
-    "\n",
     "### BFS-ID Verzeichnis\n",
-    "Herausgeber: Bundesamt für Landestopografie Swisstopo\n",
-    "Link: https://www.swisstopo.admin.ch/de/amtliches-ortschaftenverzeichnis#Ortschaftenverzeichnis--Download\n",
-    "Beschreibung\n",
+    "__Herausgeber:__\n",
+    "Bundesamt für Landestopografie Swisstopo\n",
+    "\n",
+    "__Link:__\n",
+    "https://www.swisstopo.admin.ch/de/amtliches-ortschaftenverzeichnis#Ortschaftenverzeichnis--Download\n",
+    "\n",
+    "__Beschreibung:__\n",
+    "\n",
     "Zeitraum\n",
     "Zweckerfüllung\n",
     "Qualität (Glaubwürdigkeit, Nützlichkeit, Interpretierbarkeit, Schlüsselintegrität)\n",
