--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -246,13 +246,13 @@
     "## Datenquellen\n",
     "Nachfolgend werden die verwendeten Datenquellen beschrieben und ein erstes Mal analysiert.\n",
     "### BFS-ID Verzeichnis\n",
-    "__Herausgeber:__\n",
+    "**Herausgeber:**\n",
     "Bundesamt für Landestopografie Swisstopo\n",
     "\n",
-    "__Link:__\n",
+    "**Link:**\n",
     "https://www.swisstopo.admin.ch/de/amtliches-ortschaftenverzeichnis#Ortschaftenverzeichnis--Download\n",
     "\n",
-    "__Beschreibung:__\n",
+    "**Beschreibung:**\n",
     "\n",
     "Zeitraum\n",
     "Zweckerfüllung\n",
