--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -60,12 +60,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:27.802510Z",
-     "start_time": "2024-05-13T16:05:27.799862Z"
+     "end_time": "2024-05-21T13:00:58.465909Z",
+     "start_time": "2024-05-21T13:00:57.774716Z"
     }
    },
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -272,9 +272,35 @@
    "cell_type": "code",
    "source": [
     "# City Daten einlesen als Dataframe und in DB sichern\n",
-    "city = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
+    "city_df = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
+    "city_df.head(10000)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-21T13:03:57.700770Z",
+     "start_time": "2024-05-21T13:03:57.685464Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          Ortschaftsname   PLZ  Zusatzziffer        Gemeindename  BFS-Nr  \\\n0        Aeugst am Albis  8914             0     Aeugst am Albis       1   \n1            Aeugstertal  8914             2     Aeugst am Albis       1   \n2              Zwillikon  8909             0  Affoltern am Albis       2   \n3     Affoltern am Albis  8910             0  Affoltern am Albis       2   \n4             Bonstetten  8906             0          Bonstetten       3   \n...                  ...   ...           ...                 ...     ...   \n5728           Mauren FL  9493             0              Mauren    7008   \n5729             Nendeln  9485             0             Gamprin    7009   \n5730     Gamprin-Bendern  9487             0             Gamprin    7009   \n5731             Ruggell  9491             0             Ruggell    7010   \n5732        Schellenberg  9488             0        Schellenberg    7011   \n\n     Kantonskürzel            E            N Sprache    Validity  \n0               ZH  2679402.872  1235842.010      de  2008-07-01  \n1               ZH  2679815.372  1237404.310      de  2008-07-01  \n2               ZH  2675280.133  1238108.286      de  2008-07-01  \n3               ZH  2676852.012  1236929.718      de  2008-07-01  \n4               ZH  2677412.150  1241078.278      de  2008-07-01  \n...            ...          ...          ...     ...         ...  \n5728           NaN  2759637.820  1231945.121      de  2008-07-01  \n5729           NaN  2759978.270  1229651.126      de  2008-07-01  \n5730           NaN  2757125.670  1232514.364      de  2008-07-01  \n5731           NaN  2758648.719  1235172.319      de  2008-07-01  \n5732           NaN  2759708.282  1233349.815      de  2008-07-01  \n\n[5733 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Ortschaftsname</th>\n      <th>PLZ</th>\n      <th>Zusatzziffer</th>\n      <th>Gemeindename</th>\n      <th>BFS-Nr</th>\n      <th>Kantonskürzel</th>\n      <th>E</th>\n      <th>N</th>\n      <th>Sprache</th>\n      <th>Validity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Aeugst am Albis</td>\n      <td>8914</td>\n      <td>0</td>\n      <td>Aeugst am Albis</td>\n      <td>1</td>\n      <td>ZH</td>\n      <td>2679402.872</td>\n      <td>1235842.010</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Aeugstertal</td>\n      <td>8914</td>\n      <td>2</td>\n      <td>Aeugst am Albis</td>\n      <td>1</td>\n      <td>ZH</td>\n      <td>2679815.372</td>\n      <td>1237404.310</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Zwillikon</td>\n      <td>8909</td>\n      <td>0</td>\n      <td>Affoltern am Albis</td>\n      <td>2</td>\n      <td>ZH</td>\n      <td>2675280.133</td>\n      <td>1238108.286</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Affoltern am Albis</td>\n      <td>8910</td>\n      <td>0</td>\n      <td>Affoltern am Albis</td>\n      <td>2</td>\n      <td>ZH</td>\n      <td>2676852.012</td>\n      <td>1236929.718</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bonstetten</td>\n      <td>8906</td>\n      <td>0</td>\n      <td>Bonstetten</td>\n      <td>3</td>\n      <td>ZH</td>\n      <td>2677412.150</td>\n      <td>1241078.278</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5728</th>\n      <td>Mauren FL</td>\n      <td>9493</td>\n      <td>0</td>\n      <td>Mauren</td>\n      <td>7008</td>\n      <td>NaN</td>\n      <td>2759637.820</td>\n      <td>1231945.121</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>5729</th>\n      <td>Nendeln</td>\n      <td>9485</td>\n      <td>0</td>\n      <td>Gamprin</td>\n      <td>7009</td>\n      <td>NaN</td>\n      <td>2759978.270</td>\n      <td>1229651.126</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>5730</th>\n      <td>Gamprin-Bendern</td>\n      <td>9487</td>\n      <td>0</td>\n      <td>Gamprin</td>\n      <td>7009</td>\n      <td>NaN</td>\n      <td>2757125.670</td>\n      <td>1232514.364</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>5731</th>\n      <td>Ruggell</td>\n      <td>9491</td>\n      <td>0</td>\n      <td>Ruggell</td>\n      <td>7010</td>\n      <td>NaN</td>\n      <td>2758648.719</td>\n      <td>1235172.319</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>5732</th>\n      <td>Schellenberg</td>\n      <td>9488</td>\n      <td>0</td>\n      <td>Schellenberg</td>\n      <td>7011</td>\n      <td>NaN</td>\n      <td>2759708.282</td>\n      <td>1233349.815</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n  </tbody>\n</table>\n<p>5733 rows × 10 columns</p>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "\n",
-    "for index, row in city.iterrows():\n",
+    "for index, row in city_df.iterrows():\n",
     "    ort = '\"' + row[\"Ortschaftsname\"] + '\"'\n",
     "    lawCityName = '\"' + row[\"Gemeindename\"] + '\"'\n",
     "    if isinstance(row[\"Kantonskürzel\"], str):\n",
@@ -293,7 +319,6 @@
      "start_time": "2024-05-13T16:05:27.868730Z"
     }
    },
-   "outputs": [],
    "execution_count": 34
   },
   {
