--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -273,8 +273,7 @@
    "source": [
     "# City Daten einlesen als Dataframe und in DB sichern\n",
     "city_df = pd.read_csv(\"./DATA/city_directory/AMTOVZ_CSV_LV95.csv\", delimiter=\";\")\n",
-    "city_df.head(10000)\n",
-    "city_df.info()"
+    "city_df.head(10)"
    ],
    "metadata": {
     "collapsed": false,
