--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -287,7 +287,7 @@
     "\n",
     "**Preis:** Das Dataset wird kostenlos zu Verfügung gestellt.\n",
     "\n",
-    "### Inhaltliche Analyse und Schwierigkeiten \n",
+    "#### Inhaltliche Analyse und Schwierigkeiten \n",
     "Es sind zehn Spalten in dem CSV Dataset vorhanden mit Total 5733 Zeilen. Die Spalten sind selbstsprechend. Die Spalte \"Zusatzziffer\" ist eine Post interne Ziffer und ist für die weiterführende Analyse nicht relevant. Auffallend sind die 20 null Werte in der Spalte \"Kantonskürzel\".\n",
     "Ortschaft entspricht nicht der Gemeinde und umgekehrt\n",
     "\n",
