--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -256,7 +256,15 @@
    "cell_type": "markdown",
    "source": [
     "## Datenquellen\n",
-    "Nachfolgend werden die verwendeten Datenquellen beschrieben und ein erstes Mal analysiert.\n",
+    "Nachfolgend werden die verwendeten Datenquellen beschrieben und ein erstes Mal analysiert."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### BFS-ID Verzeichnis\n",
     "**Herausgeber:**\n",
     "Bundesamt für Landestopografie Swisstopo\n",
