--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -297,10 +297,7 @@
     "\n",
     "#### Inhaltliche Analyse und Schwierigkeiten \n",
     "Es sind zehn Spalten in dem CSV Dataset vorhanden mit Total 5733 Zeilen. Die Spalten sind selbstsprechend. Die Spalte \"Zusatzziffer\" ist eine Post interne Ziffer und ist für die weiterführende Analyse nicht relevant. Auffallend sind die 20 null Werte in der Spalte \"Kantonskürzel\".\n",
-    "Ortschaft entspricht nicht der Gemeinde und umgekehrt\n",
-    "\n",
-    "Inhaltliche Analyse\n",
-    "Zusatzziffer ist eine Post interne Ziffer"
+    "Ortschaft entspricht nicht der Gemeinde und umgekehrt"
    ],
    "metadata": {
     "collapsed": false
