--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -522,7 +522,7 @@
    "cell_type": "markdown",
    "source": [
     "### Mapping BFS-Nr. <-> PLZ\n",
-    "TEst "
+    "TEst erneut"
    ],
    "metadata": {
     "collapsed": false
